# ml-minigame

./: README.md
.github/workflows/: build-and-deploy.yml  test.yml
backend/api_gateway/: Dockerfile  main.py  pyproject.toml
backend/asset_service/: Dockerfile  main.py  models.py  pyproject.toml  schemas.py
backend/data_collector/: Dockerfile  __init__.py  clickhouse_client.py  config.py  main.py  pyproject.toml  s3_client.py  scheduler.py  worker.py
backend/data_collector/collectors/: __init__.py  base.py  mock_collector.py
backend/feature_pipeline/: Dockerfile  __init__.py  batch_processor.py  clickhouse_client.py  config.py  feature_engineering.py  main.py  online_processor.py  pyproject.toml  redis_client.py  s3_client.py
backend/forecast_service/: Dockerfile  __init__.py  config.py  main.py  model_loader.py  predictor.py  pyproject.toml
backend/forecast_storage/: Dockerfile  __init__.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/model_registry/: Dockerfile  __init__.py  main.py  models.py  pyproject.toml  schemas.py
backend/model_training/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  training_pipeline.py
backend/model_training/trainers/: __init__.py  lightgbm_trainer.py  neural_trainer.py
backend/monitoring_service/: Dockerfile  __init__.py  alert_manager.py  config.py  main.py  metrics_calculator.py  pyproject.toml
backend/news_collector/: Dockerfile  __init__.py  clickhouse_client.py  config.py  main.py  pyproject.toml  s3_client.py  scheduler.py  worker.py
backend/news_collector/collectors/: __init__.py  base.py  mock_collector.py  rss_collector.py
backend/orchestration/: README.md  __init__.py  dagster_job.py
backend/orchestration/dags/: training_dag.py
backend/shared/: __init__.py  auth.py  config.py  models.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AssetsList.tsx  ForecastsChart.tsx  MetricsDashboard.tsx  ModelsList.tsx
frontend/vite-project/: package-lock.json
infrastructure/: dns-setup.md  docker-compose.yml
infrastructure/init-scripts/: clickhouse-init.sql  postgres-init.sql
infrastructure/kubernetes/: hpa.yaml  ingress.yaml  namespace.yaml
infrastructure/kubernetes/clickhouse/: configmap.yaml  secret.yaml  statefulset.yaml
infrastructure/kubernetes/kafka/: deployment.yaml
infrastructure/kubernetes/minio/: deployment.yaml  secret.yaml
infrastructure/kubernetes/postgres/: configmap.yaml  secret.yaml  statefulset.yaml
infrastructure/kubernetes/redis/: deployment.yaml
infrastructure/kubernetes/services/: all-services.yaml  api-gateway.yaml  asset-service.yaml  forecast-service.yaml  model-training.yaml
infrastructure/kubernetes/traefik/: deployment.yaml
infrastructure/prometheus/: prometheus.yml
infrastructure/scripts/: generate-traefik-password.sh  setup-traefik.sh
infrastructure/traefik/: README.md  traefik.yml
