[project]
name = "feature-pipeline"
version = "0.1.0"
description = "Feature Pipeline Service для вычисления фичей"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "clickhouse-driver>=0.2.6",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

