[project]
name = "model-training"
version = "0.1.0"
description = "Model Training Service для обучения моделей"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "lightgbm>=4.1.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

